# ParaCL

./: .clang-format  .gitignore  CMakeLists.txt  ScopePtr.h  gen_run.sh  input  main.cpp
AST/: AST.h  ASTAnalys.cpp  ASTNode.cpp  ASTVisitor.h
Codegen/: CGVisitor.cpp  CGVisitor.h  Codegen.cpp  Codegen.h
Interpret/: Interpret.cpp  Interpret.h
JIT/: JIT.h
Parser/: Driver.cpp  Driver.h  Driver.hh  Parser.cc  Parser.hh  Parser.y  Scaner.l  lex.yy.cc
Runtime/: Runtime.cpp  Runtime.h  runtime.c  runtime.h
